Bug 294856 - Translucency Effect needs to be rewritten on top of AnimationEffect
Summary: Translucency Effect needs to be rewritten on top of AnimationEffect
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.8.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 4.11
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-26 11:42 UTC by Björn Sonnenschein
Modified: 2013-06-05 06:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Sonnenschein 2012-02-26 11:42:30 UTC
Version:           4.8.0 (using KDE 4.8.0) 
OS:                Linux

When the inactive windows are set so translucent in the translucency effect settings, open a window, make it active and then klick on the application launcher in the panel, the window will not fade out smoothly, but jump immediately to its transucent state. if you click on the desktop now, it will gain a little bit more opacity.

For me as I have no idea about how kde works it looks like there's some issue with the stacking order which makes the click on the launcher lower the window by two steps or so. By klicking on the desktop it is raised one step.

Reproducible: Always

Steps to Reproduce:
When the inactive windows are set so translucent in the translucency effect settings, open a window, make it active and then klick on the application launcher in the panel, the window will not fade out smoothly, but jump immediately to its transucent state. if you click on the desktop now, it will gain a little bit more opacity.


Actual Results:  
Jumpy transparency fade

Expected Results:  
Smooth transparency fade
Comment 1 Thomas Lübking 2012-02-26 20:54:10 UTC
gah, i forgot to edit the commit mesages ...

https://git.reviewboard.kde.org/r/104083/
http://commits.kde.org/kde-workspace/b0989d4a285c474c36f0e3fc9e81125f385aa45a
http://commits.kde.org/kde-workspace/546bc39004fffb3e048c60a39c0f4204b702297

Those might fix, but the translucency effect needs to be redone for 4.9 anyway.

The "application launcher" is kickoff or lancelot or whatever but sth. that shows another window which gets activated?
Comment 2 Björn Sonnenschein 2012-02-27 11:00:17 UTC
Yes, the launcher only was an example. It can be any other element in the Panel that shows an other window which gets activated.
Comment 3 Thomas Lübking 2012-02-27 16:16:15 UTC
Ok, more straightforward: "is the panel invocation crucial for this bug" (could be becuase of an focus indirection and the translucency effect cannot handle several fades at once, why we must replace it for 4.9 ;-)
Comment 4 Martin Flöser 2013-06-05 06:33:40 UTC
Git commit 9065d67d8b727dedb19ed4e5266a2ae2786fa973 by Martin Gräßlin.
Committed on 31/05/2013 at 15:31.
Pushed by graesslin into branch 'master'.

Translucency effect rewritten in JavaScript

Supported Features:
* move/resize
* active/inactive
* special window type
* window decoration as missing in AnimationEffect

The animations are cancelled when they go into an invisible state (e.g.
desktop changed, minimized) and are set again when the window becomes
visible.

Where a transition is useful, the window gets animated, e.g. start/finish
of move resize.
FIXED-IN: 4.11
REVIEW: 110747

M  +1    -1    kwin/effects/CMakeLists.txt
M  +0    -2    kwin/effects/configs_builtins.cpp
M  +1    -29   kwin/effects/translucency/CMakeLists.txt
A  +6    -0    kwin/effects/translucency/package/CMakeLists.txt
A  +254  -0    kwin/effects/translucency/package/contents/code/main.js
R  +2    -2    kwin/effects/translucency/package/contents/config/main.xml [from: kwin/effects/translucency/translucency.kcfg - 094% similarity]
R  +0    -0    kwin/effects/translucency/package/contents/ui/config.ui [from: kwin/effects/translucency/translucency_config.ui - 100% similarity]
R  +8    -4    kwin/effects/translucency/package/metadata.desktop [from: kwin/effects/translucency/translucency.desktop - 096% similarity]
D  +0    -265  kwin/effects/translucency/translucency.cpp
D  +0    -116  kwin/effects/translucency/translucency.h
D  +0    -64   kwin/effects/translucency/translucency_config.cpp
D  +0    -91   kwin/effects/translucency/translucency_config.desktop
D  +0    -52   kwin/effects/translucency/translucency_config.h
D  +0    -5    kwin/effects/translucency/translucencyconfig.kcfgc

http://commits.kde.org/kde-workspace/9065d67d8b727dedb19ed4e5266a2ae2786fa973